# FPS-Simulator

./: .gitignore  CMakeLists.txt  DDL.docx  Developing Document.docx  FPS_Simulator  Makefile  README.md  ascii art design  main.c  playground.c  setting.cfg  start.sh  ~$DDL.docx  ~$veloping Document.docx  开发文档（说明及查询用）.docx
Game/: Makefile  enemy.c  enemy.h  game.h  player.c  player.h  region2D.h  region_square.c  region_square.h  runner.c  runner.h  scene.c  scene.h  weapon.c  weapon.h  weapon_intro.txt
Game/enemy/: behaviour.c  behaviour.h  damage.c  damage.h  enemy.c  enemy.h  findway.c  findway.h  property.c  property.h
Game/models/: 1911.txt  1911_small.txt  Enemy_Body.h  Enemy_Head.c  Enemy_leg.h  Makefile  ak.txt  boundaries.c  clock.c  clock.h  cube.c  cube.h  enemy_body.c  enemy_head.c  enemy_head.h  enemy_leg.c  enemy_leg.h  enemy_model.h  floor.c  floor.h  map_new_EndGate.c  map_new_EndGate.h  map_new_OnlyFloor.c  map_new_OnlyFloor.h  map_new_Wall.c  map_new_Wall.h  models.h  test_boundary.c  test_boundary.h  true_wall.c  true_wall.h  wall.c
Game/models/Rubbish_Bin/: boundaries.c  boundaries.h  wall.c  wall.h
GameUI/: Game_UI.h  Makefile  setting.cfg  ui_defeatmenu.c  ui_defeatmenu.h  ui_instruction.c  ui_instruction.h  ui_settingmenu.c  ui_settingmenu.h  ui_startmenu.c  ui_startmenu.h  ui_weaponselectionmenu.c  ui_weaponselectionmenu.h
enemy/: behaviour.h  damage.c  damage.h  findway.c  findway.h  property.c  property.h
obj_converter/: CDump.hs  Main.hs  Obj.hs
op_engine/: Makefile  canvas.c  canvas.h  collide_box.c  collide_box.h  input.c  input.h  line.c  line.h  linux-kbhit.c  linux-kbhit.h  matrix.c  matrix.h  mesh.c  mesh.h  model.h  object.c  object.h  op_engine.h  plane.c  plane.h  region2D.c  scene.c  scene.h  segment.c  segment.h  tag.h  transform.c  transform.h  triangle.c  triangle.h  vector.c  vector.h
op_engine/models/: clock.c  cube.c  rectangle.c  rectangle.h
test_map/: map.h  scene.c  scene.h  test_boundary.h  wall.h
util/: Makefile  array_list.c  array_list.h  util.c  util.h
